--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,31 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
 
     <!-- link favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/favicon/site.webmanifest" />
+    <link rel="shortcut icon" href="./assets/favicon/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta
+      name="msapplication-config"
+      content="./assets/favicon/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- link css file -->
     <link rel='stylesheet' href='./sass/main.scss' />
@@ -15,6 +40,37 @@
     <title>TODO</title>
   </head>
   <body>
-  <div class='wrapper'></div>
+  <div class="container">
+      <header class="text-center text-light my-4">
+        <h1 class="mb-4">Todo List</h1>
+        <form class="search">
+          <input
+            class="form-control m-auto"
+            type="text"
+            name="search"
+            autocomplete="off"
+            placeholder="search todos"
+          />
+        </form>
+      </header>
+
+      <ul class="list-group todos mx-auto text-light">
+        <!-- List Goes Here -->
+      </ul>
+
+      <form class="add text-center my-4">
+        <label class="text-light">Add a new todo...</label>
+        <input
+          class="form-control m-auto"
+          type="text"
+          name="add"
+          autocomplete="off"
+        />
+
+        <button type="submit" class="submit px-3 my-4 py-2 btn btn-light">
+          Submit
+        </button>
+      </form>
+    </div>
   </body>
 </html>
